--- a/examples/white_game.html
+++ b/examples/white_game.html
@@ -45,6 +45,7 @@
       adapter: wseasyrtc;
     "
     >
+      <!--Checking to make sure I set up git hub correctly -->
       <!--Moving to the top otherwise a-frame gets upset-->
       <a-entity environment="preset: forest"></a-entity>
 
