--- a/examples/white_game.html
+++ b/examples/white_game.html
@@ -98,7 +98,7 @@
         <a-mixin
           gltf-model="#rook_w"
           id="rook_w"
-          src="../models/sets/default/white/rook.gltf"
+          src="/src/models/sets/default/white/rook.gltf"
           geometry="primitive: box"
           material="color: blue"
           scale="0.2 0.2 0.2"
