--- a/examples/white_game.html
+++ b/examples/white_game.html
@@ -43,6 +43,7 @@
       room: notBasic;
       debug: true;
       adapter: wseasyrtc;
+      audio: true;
     "
     >
       <!--Checking to make sure I set up git hub correctly -->
