CAN I GET A HEEEYYAAAAAA

--- a/to_delete/basic-persistent.html
+++ b/to_delete/basic-persistent.html
@@ -13,7 +13,7 @@
       // see issue https://github.com/networked-aframe/networked-aframe/issues/267
 
       //gave myself some extra space to analyze this shit. (cursing is fine. If someone is code reviewing this
-      //yo're code reviewing the wrong thing)
+      //you're code reviewing the wrong thing)
 
 
       NAF.schemas.getComponentsOriginal = NAF.schemas.getComponents;
