DOUBE YEE YEE. Fixed ownership proper

--- a/examples/white_game.html
+++ b/examples/white_game.html
@@ -401,7 +401,7 @@ like what you would expect our full on entity to look like. The main diff is tha
       no mixin is needed here-->
       <a-entity
       id="rook_w_r"
-      networked="template:#rook_template;networkId:rookwr;persistent:true; "
+      networked="template:#rook_template;networkId:rookwr;persistent:true; owner:rookwr;"
         
       ></a-entity>
       
